**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-12

* Greater use of BLAS routines in the underlying method code. In particular 
  all leading order operations count steps for gam fitting now use BLAS. 
  You'll need a rather fancy BLAS to see much difference, however. 

* summary.gam p-value computation options modified (default remains the 
  same).

* summary.gam default p-value computation made more computationally 
  efficient.

1.7-11

* smoothCon bug fix to avoid NA labels for matrix arguments when 
  no by variable provided. 

* modification to p-value computation in summary.gam: `alpha' argument 
  removed (was set to zero anyway); computation now deals with possibility
  of rank deficiency computing psuedo-inverse of cov matrix for statistic. 
  Previously p-value computation could fail for random effect smooths with 
  large datasets, when a random effect has many levels. Also for large data
  sets test statistic is now based on randomly sampling max(1000,np*2) model
  matrix rows, where np is number of model coefficients (random number 
  generator state unchanged by this), previous sample size was 3000. 

* plot.mrf.smooth modified to allow passing '...' argument.

* 'negbin' modified to avoid spurious warnings on initialization call.

1.7-10

* fix stupid bug in 1.7-9 that lost term labels in plot.gam.

1.7-9

* rather lovely plot method added for splines on the sphere.

* plot.gam modified to allow 'scheme' to be specified for plots, to easily
  select different plot looks.

* schemes added for default smooth plotting method, modified for mrfs and 
  factor-smooth interactions.

* mgcv function deprected, since magic and gam are much better (let me know 
  if this is really a problem).  

1.7-8

* gamm.setup fix. Bug introduced in 1.7-7 whereby gamm with no smooths would
  fail.

* gamm gives returned object a class "gamm"


1.7-7

* "fs" smooth factor interaction class introduced, for smooth factor 