@@ -7,11 +7,17 @@
   all leading order operations count steps for gam fitting now use BLAS. 
   You'll need a rather fancy BLAS to see much difference, however. 
 
+* bam can now compute the leading order QR decomposition on a cluster
+  set up using the parallel package.
+
 * summary.gam p-value computation options modified (default remains the 
   same).
 
 * summary.gam default p-value computation made more computationally 
   efficient.
+
+* gamm and bam could fail under some options for specifying binomial models.
+  Now fixed.
 
 1.7-11
 
